what.html content ready

--- a/what.html
+++ b/what.html
@@ -51,10 +51,20 @@
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
-                                <p> Spóroljon a Földnek!</p>
-                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                                <p>Hogy legyen hol élni!</p>
+                                <h3> A komposzt jó!</h3>
+                                <p>
+                                    Minden növényi "Szemét" le tud bomlani! gondolj csak
+                                    az ősszel lehullott lombra. Táptalajt biztosít a következő
+                                    évben a növényeknek, sok állat, illetve hasznos bogár 
+                                    használja menedéknek. 
+                                </p>
+                                <p> 
+                                    Amennyiben van egy kiskerted odahaza 
+                                    sok energiát és pénzt spórolsz azzal, hogy a növényeidnek 
+                                    természetes táptalajt nyújtasz, ráadásul sok dolgod nincs 
+                                    csak bizonyos időnként átforgatni és csak azt beletenni amit
+                                    lehet komposztálni a legvégén kiszórni!
+                                </p>
                             </div>
                         </div>
                     </article>
@@ -68,10 +78,22 @@
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
-                                <p> Spóroljon a Földnek!</p>
-                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                                <p>Hogy legyen hol élni!</p>
+                                <h3> Tudta, hogy még mindig nem tuni mikor bomlik le? </h3>
+                                <p>
+                                    Sok féle műanyag van nem sorolom fel itt, de a legtöbbet 
+                                    a szelektív hulladékgyűjtő szigeteken leadható, vagy 
+                                    a legközelebbi hulladékudvarban. Újrahasznosításával sok sok
+                                    energiát sporolunk.
+                                </p>
+                                <p>
+                                    Pontosan nem tudni mikor bomlik le teljesen! 
+                                    Viszont hatalmas veszély az állatokra nézve
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4>
+                                    Nincs más dolgod csak gyűjteni és a szelektív hulladékgyűjtő szigeteken
+                                    leadni!
+                                </p>
                             </div>
                         </div>
                     </article>
@@ -85,10 +107,18 @@
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
-                                <p> Spóroljon a Földnek!</p>
-                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                                <p>Hogy legyen hol élni!</p>
+                                <h3> Akár 95%-os spórolás!</h3>
+                                <p>
+                                    Tudta, hogy az alumínium újrahasznosítűsa a gyártásához képest
+                                    95%-os energia spórolás, ráadásul 100%ban újrahasznosítható!
+                                    Dobozból - doboz és egyébb autóipari késztermékek lesznek. 
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4>
+                                    Gyűjteni és a szelektív hulladékgyűjtő szigeteken leadni. 
+                                    Amennyiben ki akarja mosni kérem tegye mosogatás után a megmaradt vízben,
+                                    ezzel vízet is spórol.
+                                </p>
                             </div>
                         </div>
                     </article>
@@ -102,10 +132,22 @@
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
-                                <p> Spóroljon a Földnek!</p>
-                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                                <p>Hogy legyen hol élni!</p>
+                                <h3>  Akkor a leghatékonyabb ha többször használod! </h3>
+                                <p>
+                                    Az üveg homokból készül közel 1500°C-on, és mint sejthető ez 
+                                    nagyon energia igényes! Amennyiben újrahasznosítják már az 
+                                    adalékanyagok hozzáadását megspóroljuk magunknak.
+                                </p>
+                                <p>
+                                    Emberi léptékben nem lebomló, és kifejezetten veszélyes! Gondoljunk 
+                                    csak arra hogy a szilánkjai sebet ejtenek rajtunk illetve akár a házikedvencünkön 
+                                    is, nyári napsütéses napon akár tüzet is okozhat! 
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4> 
+                                    Gyűjteni majd szín szerint válogatva a szelektív 
+                                    hulladékgyűjtő szigeteken leadni. 
+                                </p>
                             </div>
                         </div>
                     </article>
@@ -119,10 +161,21 @@
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
-                                <p> Spóroljon a Földnek!</p>
-                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                                <p>Hogy legyen hol élni!</p>
+                                <h3> 1 tonna papír = 2 tonna fa </h3>
+                                <p>
+                                    A papír alapanyaga a fa majd ezt vegyszerekkel színezik, közel 480m<sup>3</sup>
+                                    víz szükséges az eljáráshoz (1 tonna papír!). Sajnos ezek a vegyszerrek
+                                    utána a folyóvízben landolnak, amit iszunk.
+                                </p>
+                                <p>
+                                    Erdő írtások miatt felmerül az elsivatagosodás veszélye, nem is említve, hogy
+                                    az erdő mennyi állatnak ad élőhelyet. Ezzel együtt jár a táplálék lánc felbomlása,
+                                    a vízforgalom változása: kevesebb párologtatás = több száraz időszak!
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4>
+                                    A papírokat egybe gyűjteni és a szelektív hulladékgyűjtő szigeteken leadni. 
+                                </p>
                             </div>
                         </div>
                     </article>
@@ -136,10 +189,26 @@
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
-                                <p> Spóroljon a Földnek!</p>
-                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                                <p>Hogy legyen hol élni!</p>
+                                <h3>300 tonna arany, 1000 tonna ezüst, 1900 tonna réz</h3>
+                                <p>
+                                    Elektronikai hulladék minden háztartási kis illetve nagygép, szórakoztató
+                                    elektronika, melyben nagyon sok nemes fém és mégtöbb műanyag van! És évente
+                                    mintegy 20 millió tonna ! elektronikai hulladék keletkezik! 
+                                </p>
+                                <p>
+                                    Ami annyit tesz: 300 tonna arany és 1000 tonna ezüst, 1900 tonna réz 
+                                    vész kárba, ezek összértékét mintegy 52 milliárd dollárra becsüli a 
+                                    jelentés. Kárba vész továbbá 16.000 tonna vas is!!
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4>
+                                    A lakosság térítésmentesen adhatja le hulladékká vált elektromos és 
+                                    elektronikai berendezéseit a hulladékgyűjtő udvarokban és az elektromos 
+                                    és elektronikai készülékeket forgalmazó kereskedőknél, azaz ahol vettük 
+                                    a készüléket, ott általában térítésmentesen át is veszik a hasonló típusú 
+                                    e-hulladékokat. Előtte azért nem árt odatelefonálni, csakhogy ne érjen minket 
+                                    meglepetés!
+                                </p>
                             </div>
                         </div>
                     </article>
