hazmat.html content ready

--- a/hazmat.html
+++ b/hazmat.html
@@ -40,48 +40,113 @@
         <main> 
             <h1><span> „Van amit ésszel kell!”</span></h1>
             <!--Main wrapp-->
-            <div class="main-wrapp">
-                <!--Article wrapp-->
-                <article class="article-wrapper article-what">
-                    <h2>Komposzt</h2>
-                    <div class="picture">
-                         <img src="./images/stockvault-man-holding-recycle-bin255172.png" 
-                         alt="Újrahasznosító öltönyös ember" /></div>
-                    <p> -"Nincs nekem erre időm!"</p>
-                    <p>Nekünk van! Önnek csak az a feladata hogy a megfelelő szemetet a megfelelő helyre
-                        tegye, hogy újjászületve ismét hasznosak legyenek. Bízza az önkénteseinkre és figyelje a naptárat! 
-                    Helyezze a szemetet a kijelölt helyre!</p>
-                    <p>Nézze meg a naptárat:</p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
-                </article>
-                <!--/Article wrapp-->
-                <!--Article wrapp-->
-                <article class="article-wrapper">
-                    <h2>Gyűjtse szelektíven!</h2>
-                    <div class="picture"> 
-                        <img src="./images/recycling-small.png" 
-                        alt="Újrahasznosítható szemét egy vödörben" /></div>
-                    <p> Nem is nehéz!</p>  
-                    <p>Amennyiben a naptári napokon kívül szeretné a szelektív hulladékot elhelyezni keresse fel a 
-                        gyűjtőpontjainkat, és ott ingyen és bérmentve elhelyezheti azokat akár bevásárlás előtt vagy
-                        után is! Idő takarékos és Zöld!</p>
-                    <p>Tudja meg hol keressen minket:</p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
-                </article>
-                <!--/Article wrapp-->
-                <!--Article wrapp-->
-                <article class="article-wrapper">
-                    <h2>Gondolkojon Zölden!</h2>
-                    <div class="picture"> 
-                        <img src="./images/think-green.png" 
-                        alt="Újrahasznosítható szemét egy vödörben" /></div>
-                    <p> Spóroljon a Földnek!</p>
-                    <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                        terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                    <p>Hogy legyen hol élni!</p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
-                </article>
-                <!--/Article wrapp-->
+            <div class="what-container">
+                    <!--Article wrapp-->
+                    <article id="olaj">
+                        <h2>Olaj és zsír</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/glass.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <h3>  Soha ne a csatornába </h3>
+                                <p>
+                                    <strong>Étkezési olaj/ zsír</strong> többszöri használata kényes mert sütés 
+                                    folyamán olyan elváltozások zajlanak mellyek a gasztronómiai élményt rontja ezt 
+                                    nevezzük az olaj/ zsír elhasználódásának
+                                </p>
+                                <p>
+                                    A használt olajak, zsírok a csatornába kerülve dugulást okozhat, növeli a 
+                                    szennyvíztisztítók terhelését.
+                                </p>
+                                <p>
+                                    Természetbe jutva vízen és szárazföldön az olaj filmréteget hoz létre ezzel
+                                    a talaj légáteresztő képességét meggátolja, illetve vízen az oxigén bejutást 
+                                    gátolja ezzel gyakorlatilag a vízi állatok megfulladásást okozza.
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4> 
+                                    Használat után gyűjtsük egy nagyobb flakonba,
+                                    esetleg kannába ezt cégek szívesen elszállítják vagy a legtöbb MOL kúton
+                                    leadható! Semmikép ne a csatorna rendszerbe.
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp--> 
+                    <!--Article wrapp-->
+                    <article id="uveg">
+                        <h2>Akkumlátor és száraz elem</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/glass.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <h3>  Kisseb és nagyobb erőművek a házban </h3>
+                                <p>
+                                   <strong>A Szárazelem</strong> egy kisebb energia forrás melyben szilárd alkáli fémek
+                                   reakciója adja az elektromos áramot. A használt elemek jelentős része sajnálatos módon 
+                                   nem kerül külön visszagyűjtésre, így a kommunális hulladékkal együtt az 
+                                   égetőkbe kerülve szennyezi a levegőt illetve a hulladéklerakókban a talajvizet.
+                                </p>
+                                <p>
+                                    Veszélyességük főleg abban az esetben jelentkezik, ha ellenőrizetlen körülmények 
+                                    között a természetbe kerülnek. Ekkor - a külső burkolat megsérülése 
+                                    következtében - a szárazelem alkotóelemei, főleg a nehézfémek, a környezet 
+                                    nedvességével érintkezve kioldódhatnak, és az oldatok a talajt és a 
+                                    talajvizet szennyezhetik.
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4> 
+                                    Gyűjteni majd a használtelem gyűjtő ponton leadni. 
+                                    
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp--> 
+                    <!--Article wrapp-->
+                    <article id="uveg">
+                        <h2>Gyógyszer</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/glass.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <h3>  A Földet nem gyógyítja! </h3>
+                                <p>
+                                    Mivel a gyógyszerek kémiai anyagokból készülnek, és ezek sokszor specifikusan 
+                                    adott kórokozó ellen hatékonyak, és csak megfelelő dózis mellett hatékonyak
+                                    minden más esetben káros veszélyes anyagnak minősítendő!
+                                </p>
+                                <p>
+                                    Gondoljon bele nagydózisban egy gyengébb gyógyszer is mérgezést, esetekben halált okozhat.
+                                    Ez igaz az élővilágra is! Illetve ami nekünk emberi fajnak segít az más lényeket jellemzően állatokat
+                                    mérgez, ezért nem mindegy hogy hova is kerül.
+                                </p>
+                                <p>
+                                    <h4>Mit kell tenni?</h4> 
+                                    A gyógyszereket minden patikában átveszik! A gyógyszer dobozát ne
+                                    tegye a gyűjtőbe!
+                                </p>
+                                <p> 
+                                    <strong>Figyelem! Kérdezze a patikusát a:</strong> 
+                                    <ul>
+                                        <li>A robbanékony, vagy éghető gyógyszerekről</li>
+                                        <li>higany tartalmú gyógyszerekről</li>
+                                        <li>Fecskendőkről</li>
+                                    </ul>
+                                     Amennyiben köznyelven drognak minősülő készitményt akar 
+                                     leadni akkor <strong>minden esetben</strong> a gyógyszerésznek személyesen
+                                     tegye!
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp--> 
             </div>
              <!--/Main wrapp-->
              <div class="sticky what-sticky"><a href="#top" aria-label="Oldal tetejére">
