All site is ready + contactform

--- a/hazmat.html
+++ b/hazmat.html
@@ -31,7 +31,7 @@
                       <a class="nav-recycle" href="./hazmat.html" aria-label="Veszélyes hulladék">Veszélyes hulladék<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-recycle" href="#" aria-label="kapcsolat">Kapcsolat</a>
+                        <a class="nav-recycle" href="./contact.html" aria-label="kapcsolat">Kapcsolat</a>
                     </li>
                   </ul>
                 </div>
@@ -46,7 +46,7 @@
                         <h2>Olaj és zsír</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/glass.png" 
+                                <img src="./images/oil.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
@@ -80,7 +80,7 @@
                         <h2>Akkumlátor és száraz elem</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/glass.png" 
+                                <img src="./images/battery-selektive.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
@@ -112,7 +112,7 @@
                         <h2>Gyógyszer</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/glass.png" 
+                                <img src="./images/medicine.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
