--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <a class="nav-recycle" href="./hazmat.html" aria-label="Veszélyes hulladék">Veszélyes hulladék</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-recycle" href="#" aria-label="kapcsolat">Kapcsolat</a>
+                      <a class="nav-recycle" href="./contact.html" aria-label="kapcsolat">Kapcsolat</a>
                     </li>
                   </ul>
                 </div>
