blog content resizing

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                          <img src="./images/stockvault-man-holding-recycle-bin255172.png" 
                          alt="Újrahasznosító öltönyös ember" />
                     </div>
-                    <div class="article-content">
+                    <div class="article-content blog">
                         <p> -"Nincs nekem erre időm!"</p>
                         <p>Nekünk van! Önnek csak az a feladata hogy a megfelelő szemetet a megfelelő helyre
                             tegye, hogy újjászületve ismét hasznosak legyenek. Bízza az önkénteseinkre és figyelje a 
@@ -66,7 +66,7 @@
                         <img src="./images/recycling-small.png" 
                         alt="Újrahasznosítható szemét egy vödörben" />
                     </div>
-                    <div class="article-content">
+                    <div class="article-content blog">
                         <p> Nem is nehéz!</p>  
                         <p>Amennyiben a naptári napokon kívül szeretné a szelektív hulladékot elhelyezni keresse fel a 
                             gyűjtőpontjainkat, és ott ingyen és bérmentve elhelyezheti azokat akár bevásárlás előtt vagy
@@ -83,7 +83,7 @@
                         <img src="./images/think-green.png" 
                         alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                     </div>
-                    <div class="article-content">
+                    <div class="article-content blog">
                         <p> Spóroljon a Földnek!</p>
                         <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
                             terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
