All of the aria label filled and validator errors replaced

--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
 
   <!-- Copy -->
   <div class="custom-control custom-checkbox mb-4">
-      <input type="checkbox" class="custom-control-input">
-      <label class="custom-control-label" for="defaultContactFormCopy">Kérek egy másolatot a címemre!</label>
+      <input type="checkbox" class="custom-control-input" id="masolat">
+      <label class="custom-control-label" for="masolat">Kérek egy másolatot a címemre!</label>
   </div>
 
   <!-- Send button -->
