--- a/hazmat.html
+++ b/hazmat.html
@@ -47,7 +47,7 @@
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/oil.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Olaj csepp" />
                             </div>
                             <div class="article-content">
                                 <h3>  Soha ne a csatornába </h3>
@@ -65,8 +65,8 @@
                                     a talaj légáteresztő képességét meggátolja, illetve vízen az oxigén bejutást 
                                     gátolja ezzel gyakorlatilag a vízi állatok megfulladásást okozza.
                                 </p>
-                                <p>
-                                    <h4>Mit kell tenni?</h4> 
+                                <h4>Mit kell tenni?</h4>
+                                <p> 
                                     Használat után gyűjtsük egy nagyobb flakonba,
                                     esetleg kannába ezt cégek szívesen elszállítják vagy a legtöbb MOL kúton
                                     leadható! Semmikép ne a csatorna rendszerbe.
@@ -76,12 +76,12 @@
                     </article>
                     <!--/Article wrapp--> 
                     <!--Article wrapp-->
-                    <article id="uveg">
+                    <article>
                         <h2>Akkumlátor és száraz elem</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/battery-selektive.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="három darab fűben lévő elem" />
                             </div>
                             <div class="article-content">
                                 <h3>  Kisseb és nagyobb erőművek a házban </h3>
@@ -98,8 +98,8 @@
                                     nedvességével érintkezve kioldódhatnak, és az oldatok a talajt és a 
                                     talajvizet szennyezhetik.
                                 </p>
+                                <h4>Mit kell tenni?</h4> 
                                 <p>
-                                    <h4>Mit kell tenni?</h4> 
                                     Gyűjteni majd a használtelem gyűjtő ponton leadni. 
                                     
                                 </p>
@@ -108,12 +108,12 @@
                     </article>
                     <!--/Article wrapp--> 
                     <!--Article wrapp-->
-                    <article id="uveg">
+                    <article>
                         <h2>Gyógyszer</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/medicine.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Két gyógyszeres üveg, 4 darab orvosi pirula és a háttérben egy zöld kereszt karikában" />
                             </div>
                             <div class="article-content">
                                 <h3>  A Földet nem gyógyítja! </h3>
@@ -127,18 +127,20 @@
                                     Ez igaz az élővilágra is! Illetve ami nekünk emberi fajnak segít az más lényeket jellemzően állatokat
                                     mérgez, ezért nem mindegy hogy hova is kerül.
                                 </p>
-                                <p>
-                                    <h4>Mit kell tenni?</h4> 
+                                <h4>Mit kell tenni?</h4>
+                                <p> 
                                     A gyógyszereket minden patikában átveszik! A gyógyszer dobozát ne
                                     tegye a gyűjtőbe!
                                 </p>
                                 <p> 
                                     <strong>Figyelem! Kérdezze a patikusát a:</strong> 
+                                </p>
                                     <ul>
                                         <li>A robbanékony, vagy éghető gyógyszerekről</li>
                                         <li>higany tartalmú gyógyszerekről</li>
                                         <li>Fecskendőkről</li>
                                     </ul>
+                                <p>
                                      Amennyiben köznyelven drognak minősülő készitményt akar 
                                      leadni akkor <strong>minden esetben</strong> a gyógyszerésznek személyesen
                                      tegye!
