--- a/what.html
+++ b/what.html
@@ -48,7 +48,7 @@
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/compost.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Egy kéz mely földet tart benne egy növénnyel" />
                             </div>
                             <div class="article-content">
                                 <h3> A komposzt jó!</h3>
@@ -75,7 +75,7 @@
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/plastic-reciciling.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Zöld edény tele pet palackokkal" />
                             </div>
                             <div class="article-content">
                                 <h3> Tudta, hogy még mindig nem tuni mikor bomlik le? </h3>
@@ -89,8 +89,8 @@
                                     Pontosan nem tudni mikor bomlik le teljesen! 
                                     Viszont hatalmas veszély az állatokra nézve
                                 </p>
+                                <h4>Mit kell tenni?</h4>
                                 <p>
-                                    <h4>Mit kell tenni?</h4>
                                     Nincs más dolgod csak gyűjteni és a szelektív hulladékgyűjtő szigeteken
                                     leadni!
                                 </p>
@@ -104,7 +104,7 @@
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/alu-recicling.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Alumínium doboz rajta 3 egymásra mutató nyillal" />
                             </div>
                             <div class="article-content">
                                 <h3> Akár 95%-os spórolás!</h3>
@@ -113,8 +113,8 @@
                                     95%-os energia spórolás, ráadásul 100%ban újrahasznosítható!
                                     Dobozból - doboz és egyébb autóipari késztermékek lesznek. 
                                 </p>
+                                <h4>Mit kell tenni?</h4>
                                 <p>
-                                    <h4>Mit kell tenni?</h4>
                                     Gyűjteni és a szelektív hulladékgyűjtő szigeteken leadni. 
                                     Amennyiben ki akarja mosni kérem tegye mosogatás után a megmaradt vízben,
                                     ezzel vízet is spórol.
@@ -129,7 +129,7 @@
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/glass.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Műanyag kuka tele sörös üveggel oldalán csak üveg felirattal" />
                             </div>
                             <div class="article-content">
                                 <h3>  Akkor a leghatékonyabb ha többször használod! </h3>
@@ -143,8 +143,8 @@
                                     csak arra hogy a szilánkjai sebet ejtenek rajtunk illetve akár a házikedvencünkön 
                                     is, nyári napsütéses napon akár tüzet is okozhat! 
                                 </p>
-                                <p>
-                                    <h4>Mit kell tenni?</h4> 
+                                <h4>Mit kell tenni?</h4>
+                                <p> 
                                     Gyűjteni majd szín szerint válogatva a szelektív 
                                     hulladékgyűjtő szigeteken leadni. 
                                 </p>
@@ -158,7 +158,7 @@
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/papier-recicling.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Üveg szemetes tele gyűrött papírral" />
                             </div>
                             <div class="article-content">
                                 <h3> 1 tonna papír = 2 tonna fa </h3>
@@ -172,8 +172,8 @@
                                     az erdő mennyi állatnak ad élőhelyet. Ezzel együtt jár a táplálék lánc felbomlása,
                                     a vízforgalom változása: kevesebb párologtatás = több száraz időszak!
                                 </p>
+                                <h4>Mit kell tenni?</h4>
                                 <p>
-                                    <h4>Mit kell tenni?</h4>
                                     A papírokat egybe gyűjteni és a szelektív hulladékgyűjtő szigeteken leadni. 
                                 </p>
                             </div>
@@ -186,7 +186,7 @@
                         <div class="what-wrap">
                             <div class="picture"> 
                                 <img src="./images/electronic-recicling.png" 
-                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                                alt="Monitor körülötte három egymásra mutató nyíl" />
                             </div>
                             <div class="article-content">
                                 <h3>300 tonna arany, 1000 tonna ezüst, 1900 tonna réz</h3>
@@ -200,8 +200,8 @@
                                     vész kárba, ezek összértékét mintegy 52 milliárd dollárra becsüli a 
                                     jelentés. Kárba vész továbbá 16.000 tonna vas is!!
                                 </p>
+                                <h4>Mit kell tenni?</h4>
                                 <p>
-                                    <h4>Mit kell tenni?</h4>
                                     A lakosság térítésmentesen adhatja le hulladékká vált elektromos és 
                                     elektronikai berendezéseit a hulladékgyűjtő udvarokban és az elektromos 
                                     és elektronikai készülékeket forgalmazó kereskedőknél, azaz ahol vettük 
